# Bible-Crawler-Rust

./: .gitignore  Bibel.html  Bibel.md  Cargo.toml  EU.json  README.md
.github/workflows/: Linux.yml  Mac.yml  Windows.yml  rust.yml
src/: BB.json  BHS.json  BTX.json  ELB.json  EU.json  GNB.json  LUT.json  NA28.json  NEUE.json  VLX.json  main.rs  names.json
